[tool.poetry]
name = "foo"
version = "0.0.1"
description = "TODO - this is a basic template"
authors = ["Anna <annaspfohl@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.6,<3.11"
pandas = "^1.3.5"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
# TODO: Consider https://github.com/csurfer/blackcellmagic
black = "^21.12b0"
isort = "^5.10.1"
pylint = "^2.12.2"
flake8 = "^4.0.1"
mypy = "^0.930"
pycodestyle = "^2.8.0"

[tools.flake8]
ignore="E203,W503,F401"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
